@@ -153,8 +153,7 @@ static void
 rb_struct_modify(VALUE s)
 {
     rb_check_frozen(s);
-    if (!OBJ_UNTRUSTED(s) && rb_safe_level() >= 4)
-       rb_raise(rb_eSecurityError, "Insecure: can't modify Struct");
+    rb_check_trusted(s);
 }
 
 static VALUE
